# lw-oop-5

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: devcontainer.json
include/: CustomMemoryResource.hpp  ForwardList.hpp
src/: CustomMemoryResource.cpp
test/: tests.cpp
